# audio_out_example

./: CMakeLists.txt  README.md  config.h.in
resources/: sound_map
src/: controller.cpp  controller.h  main.cpp  main.qml  play_sound.cpp  play_sound.h  player.cpp  player.h
